# repo_src

./: .gitignore  CMakeLists.txt  README.md  myfunc.h
1.c/: a  printf.c
2.linux/1.file_management/: c_file.c
2.linux/2.process/: test_correct_sell_tickets.c  test_mutex.c
2.linux/3.network/: test_htons.c  test_ipaddr.c
Master/: epoll_compare_select.c
Master/2.process/: test_cond_sell_tickets.c  test_wrong_sell_tickets.c
arm/demo/: template.uvguix.14137
arm/demo/Listings/: startup_stm32f10x_md.lst  template.map
arm/demo/Objects/: button.crf  button.d  delay.crf  delay.d  i2c.crf  i2c.d  main.crf  main.d  misc.crf  misc.d  oled.crf  oled.d  si2c.crf  si2c.d  spi.crf  spi.d  stm32f10x_adc.crf  stm32f10x_adc.d  stm32f10x_bkp.crf  stm32f10x_bkp.d  stm32f10x_can.crf  stm32f10x_can.d  stm32f10x_cec.crf  stm32f10x_cec.d  stm32f10x_crc.crf  stm32f10x_crc.d  stm32f10x_dac.crf  stm32f10x_dac.d  (+43 more)
c/1.file_management/: test.c
c/2.process/: test_condition.c  test_createThread.c  test_pthread_exit.c  test_pthread_join.c  test_race_condition.c  test_sync.c  test_wait_status.c
c/3.network/: check_endian.c  gethostname.c
projects/chat_poor/: .gitignore
projects/dl/: test.ipynb
projects/py_test/: calc_two_number.py  currency_converter.py  demo_turtle.py  list_operation.py  plot_hexagon.py  plot_square.py  tempConvert.py  upper.py
projects/select_chat_project/src/: CMakeLists.txt  client.c
projects/whisper_shell_script/: small_generate_subtitle.py
select_chat_project/include/: myfunc.h
z_backups/: makefile
z_backups/nvim/: init.lua  lazy-lock.json
(+13 files in other folders)
